@@ -1,5 +1,9 @@
 [b]Version 14.9.0.x[/b]:
 
+(2015-02-18)
+ * New action show_time (assigned by default to key I). It shows the current
+   playback time, total time and percentage, for 5 seconds on the OSD.
+
 (2015-02-14)
  * Allow duplicate items in the playlist.
 
